feat(git): extend publish workflow to upload to open vsx

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,27 +6,46 @@ permissions:
 on:
   push:
     tags:
-      - '[0-9]+.*'
+      - "[0-9]+.*"
+  workflow_dispatch:
 
 jobs:
-  release-extension:
+  # release-extension:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - name: Setup Node
+  #       uses: actions/setup-node@v4
+  #     - name: Install deps
+  #       run: npm install
+  #     - name: Install vsce
+  #       run: npm install vsce -g
+  #     - name: Compile
+  #       run: npm run compile
+  #     - name: Package VSCE
+  #       run: vsce package -o ast-grep-vscode.vsix
+  #     - name: Create GH Release
+  #       uses: softprops/action-gh-release@v2
+  #       with:
+  #         files: ast-grep-vscode.vsix
+  #     - name: Publish extension
+  #       run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
+  publish-on-open-vsx:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Setup Node
         uses: actions/setup-node@v4
-      - name: Install deps
+
+      - name: Install dependencies
         run: npm install
-      - name: Install vsce
-        run: npm install vsce -g
-      - name: Compile
-        run: npm run compile
-      - name: Package VSCE
-        run: vsce package -o ast-grep-vscode.vsix
-      - name: Create GH Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: ast-grep-vscode.vsix
-      - name: Publish extension
-        run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
+
+      - name: Install ovsx (Open VSX CLI)
+        run: npm install -g ovsx
+
+      - name: Publish to Open VSX
+        run: |
+          npx ovsx publish -p ${{ secrets.OVSX_TOKEN }}
